# robot_calibration

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: features.md  piper_excitation_notes.md  roadmap.md
docs/superpowers/plans/: 2026-04-21-robot-calibration-framework.md  2026-04-25-excitation-trajectory-classes.md  2026-04-25-pymoo-excitation-condition-optimizer.md
docs/superpowers/specs/: 2026-04-21-robot-calibration-framework-design.md
examples/: dynamics_ols.py  kinematics_2r.py  matlab_reference_consistency.py  piper_dynamics_cvxpy_identification.py  piper_excitation_trajectory.py  piper_rviz_visualization.py  robot_dynamics.ipynb
src/robot_calibration/: __init__.py
src/robot_calibration/cli/: __init__.py  main.py
src/robot_calibration/data/: __init__.py  dataset.py  loaders.py
src/robot_calibration/dynamics/: __init__.py  base_parameters.py  constrained_identification.py  current_identification.py  cvxpy_identification.py  friction.py  identification.py  observation.py  pinocchio_adapter.py  pinocchio_dynamics.py  validation.py
tests/: test_cli.py  test_constrained_identification.py  test_cvxpy_identification.py  test_dataset.py  test_dynamics.py  test_filtering.py  test_imports.py  test_kinematics.py  test_loaders.py  test_matlab_reference_consistency.py  test_metrics.py  test_pinocchio_adapter.py  test_pinocchio_dynamics_workflow.py  test_piper_excitation_example.py  test_piper_rviz_visualization.py  test_reference_ur10e_workflow.py  test_reference_ur_data.py  test_trajectory.py  test_trajectory_optimization.py
(+14 files in other folders)
