[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-calibration"
version = "0.1.0"
description = "Python tools for robot kinematics and dynamics calibration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pymoo>=0.6.1",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
pinocchio = [
  "pin>=2.6",
]
cvxpy = [
  "cvxpy>=1.4",
]

[project.scripts]
robot-calib = "robot_calibration.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
